--- a/app/src/main/res/layout/new_feed_layout.xml
+++ b/app/src/main/res/layout/new_feed_layout.xml
@@ -15,9 +15,9 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/cvCard"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_height="@dimen/zero_dp"
+            android:layout_marginHorizontal="@dimen/diam_16dp"
+            android:layout_marginTop="@dimen/diam_16dp"
             android:clipToPadding="true"
             android:visibility="gone"
             app:layout_constraintDimensionRatio="16:9"
@@ -35,12 +35,12 @@
 
         <TextView
             android:id="@+id/tvHeading"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/zero_dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="@dimen/diam_16dp"
+            android:layout_marginTop="@dimen/diam_10dp"
             android:ellipsize="end"
-            android:textSize="20sp"
+            android:textSize="@dimen/textsize_20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -50,9 +50,9 @@
             android:id="@+id/tvSubHeading"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginHorizontal="@dimen/diam_16dp"
+            android:layout_marginTop="@dimen/diam_10dp"
+            android:layout_marginBottom="@dimen/diam_10dp"
             android:ellipsize="end"
             android:gravity="start"
             android:maxLines="3"
