--- a/app/src/main/res/layout/category_layout.xml
+++ b/app/src/main/res/layout/category_layout.xml
@@ -7,12 +7,12 @@
     </data>
 
     <androidx.cardview.widget.CardView
-        android:layout_width="120dp"
-        android:layout_height="60dp"
-        app:cardCornerRadius="8dp"
+        android:layout_width="@dimen/diam_120dp"
+        android:layout_height="@dimen/diam_60dp"
+        app:cardCornerRadius="@dimen/diam_8dp"
         android:clipChildren="true"
         android:clipToPadding="true"
-        android:layout_margin="10dp"
+        android:layout_margin="@dimen/diam_10dp"
         android:id="@+id/clContainer">
 
         <ImageView
